 - #createbigcannons:big_cannon_propellant
  - Includes:
   - #createbigcannons:big_cannon_cartridges
   - #createbigcannons:big_cannon_propellant_bags
- Added ability to place Autocannon Ammo Containers as blocks
- Added tooltip to Autocannon Ammo Container showing contained items and spacing
- Added Creative Autocannon Ammo Container, an endless source of autocannon ammo
- Added block hardness compatibility with Create Copycat blocks
Changes:
- Reduced the stress cost of the Cannon Loader to match that of the Mechanical Piston
- Reduced default blob count of Fluid Shell
- Changed minimum spread of cannons, varying by material strength
- Changed "max_safe_charges" big cannon config option to "max_safe_propellant_stress"
 - The old field still works, but a warning will be printed in the game log highlighting any deprecated files.
- Changed "squib_ratio_barrels" and "squib_ratio_propellant" to "minimum_velocity_per_barrel"
 - The old fields still work, but a warning will be printed in the game log highlighting any deprecated files.
- Changed minimum timing for Timed Fuze from 20 ticks (1 second) to 1 tick, reduced maximum time from 25s 15t to 24s 15t
- Changed minimum timing for Delayed Impact Fuze from 20 ticks (1 second) to 1 tick, reduced maximum time from 6s to 5s
- Improved data pack config for block hardness and block properties for terminal ballistics in general
Fixes:
- Fixed drop mortar not dropping stored item if disassembled or broken before fired
- Fixed drop mortar holding entire stack
- Fixed glitch-loading, with toggle to re-enable it*
- Fixed attachment checks
- Fixed Cannon Loader not breaking other blocks when destroyed
- Fixed Cannon Loader not assembling when new under certain conditions
- Fixed block properties of some blocks
- Fixed back-fuzed Delayed Impact Fuze going off when it should not
- Fixed primed Timed Fuze and Delayed Impact Fuze despawning before detonating
- Fixed munitions not dropping when breaking cannon blocks