@@ -82,6 +82,7 @@ dependencies {
 
 	// Fixes, integration
 	//modImplementation("curse.maven:free-cam-557076:${freecam_forge_file}") // Freecam
+	modLocalRuntime("curse.maven:copycats-968398:${copycats_forge_file}")
 }
 
 processResources {
